force-app/main/default/objects/CDL_Log_Event__e/fields/CDL_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>CDL_Line_Number__c</fullName>
    <label>Line Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>