force-app/main/default/objects/CDL_Log_Event__e/fields/CDL_Message__c.field-meta.xml
<CustomField>
    <fullName>CDL_Message__c</fullName>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>