force-app/main/default/objects/CDL_Log_Event__e/fields/CDL_Quiddity__c.field-meta.xml
<CustomField>
    <fullName>CDL_Quiddity__c</fullName>
    <description>What this log is about. See quiddity types: https://developer.salesforce.com/docs/atlas.en-us.apexref.meta/apexref/apex_enum_System_Quiddity.htm</description>
    <label>Quiddity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>