force-app/main/default/objects/CDL_Log_Event__e/fields/CDL_Severity__c.field-meta.xml
<CustomField>
    <fullName>CDL_Severity__c</fullName>
    <label>Severity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>