force-app/main/default/objects/CDL_Log_Event__e/fields/CDL_Type__c.field-meta.xml
<CustomField>
    <fullName>CDL_Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>